[package]
name = "last-spot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
base64 = "0.22.1"
rand = "0.8"
serde_json = "1.0"
urlencoding = "2.1"
chrono = "0.4"
url = "2.4"